rocks-sys/rocks/ctypes.hpp

  struct rocks_column_family_handle_t     { ColumnFamilyHandle* rep; };
  struct rocks_db_t                       { DB*                 rep; };
  /* options */ 
  struct rocks_column_family_options_t       { ColumnFamilyOptions       rep; };
  struct rocks_options_t                   { Options                   rep; };
  struct rocks_readoptions_t               {
    ReadOptions rep;
    Slice upper_bound; // stack variable to set pointer to in ReadOptions
  };
  struct rocks_writeoptions_t              { WriteOptions              rep; };
  /* rate_limiter */

  struct rocks_ratelimiter_t { RateLimiter* rep; };
  /* env */
  struct rocks_envoptions_t      { EnvOptions        rep; };
  struct rocks_logger_t          { shared_ptr<Logger>  rep; };
  struct rocks_env_t {
    Env* rep;
    bool is_default;
  };
  /* snapshot*/
  struct rocks_snapshot_t        { const Snapshot*   rep; };