rocks-sys/src/c.rs

#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocks_ratelimiter_t([u8; 0]);
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocks_envoptions_t([u8; 0]);
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocks_logger_t([u8; 0]);
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocks_env_t([u8; 0]);
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct rocks_snapshot_t([u8; 0]);
extern "C" {
    pub fn rocks_options_create() -> *mut rocks_options_t;
}
extern "C" {
    pub fn rocks_options_destroy(options: *mut rocks_options_t);
}
extern "C" {
    pub fn rocks_options_set_create_if_missing(opt: *mut rocks_options_t,
                                               v: ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn rocks_column_family_options_create()
     -> *mut rocks_column_family_options_t;
}
extern "C" {
    pub fn rocks_column_family_options_destroy(options:
                                                   *mut rocks_column_family_options_t);
}
extern "C" {
    pub fn rocks_options_increase_parallelism(opt: *mut rocks_options_t,
                                              total_threads:
                                                  ::std::os::raw::c_int);
}
extern "C" {
    pub fn rocks_options_optimize_for_point_lookup(opt: *mut rocks_options_t,
                                                   block_cache_size_mb: u64);
}
extern "C" {
    pub fn rocks_options_optimize_level_style_compaction(opt:
                                                             *mut rocks_options_t,
                                                         memtable_memory_budget:
                                                             u64);
}
extern "C" {
    pub fn rocks_options_optimize_universal_style_compaction(opt:
                                                                 *mut rocks_options_t,
                                                             memtable_memory_budget:
                                                                 u64);
}
extern "C" {
    pub fn rocks_readoptions_create() -> *mut rocks_readoptions_t;
}
extern "C" {
    pub fn rocks_readoptions_destroy(opt: *mut rocks_readoptions_t);
}
extern "C" {
    pub fn rocks_readoptions_set_verify_checksums(opt:
                                                      *mut rocks_readoptions_t,
                                                  v: ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn rocks_readoptions_set_fill_cache(opt: *mut rocks_readoptions_t,
                                            v: ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn rocks_readoptions_set_snapshot(opt: *mut rocks_readoptions_t,
                                          snap: *const rocks_snapshot_t);
}
extern "C" {
    pub fn rocks_readoptions_set_iterate_upper_bound(opt:
                                                         *mut rocks_readoptions_t,
                                                     key:
                                                         *const ::std::os::raw::c_char,
                                                     keylen: usize);
}
extern "C" {
    pub fn rocks_readoptions_set_read_tier(opt: *mut rocks_readoptions_t,
                                           v: ::std::os::raw::c_int);
}
extern "C" {
    pub fn rocks_readoptions_set_tailing(opt: *mut rocks_readoptions_t,
                                         v: ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn rocks_readoptions_set_readahead_size(opt: *mut rocks_readoptions_t,
                                                v: usize);
}
extern "C" {
    pub fn rocks_readoptions_set_pin_data(opt: *mut rocks_readoptions_t,
                                          v: ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn rocks_readoptions_set_total_order_seek(opt:
                                                      *mut rocks_readoptions_t,
                                                  v: ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn rocks_writeoptions_create() -> *mut rocks_writeoptions_t;
}
extern "C" {
    pub fn rocks_writeoptions_destroy(opt: *mut rocks_writeoptions_t);
}
extern "C" {
    pub fn rocks_writeoptions_set_sync(opt: *mut rocks_writeoptions_t,
                                       v: ::std::os::raw::c_uchar);
}
extern "C" {
    pub fn rocks_writeoptions_disable_WAL(opt: *mut rocks_writeoptions_t,
                                          disable: ::std::os::raw::c_int);
}
extern "C" {
    pub fn rocks_create_logger_from_options(path:
                                                *const ::std::os::raw::c_char,
                                            opts: *mut rocks_options_t,
                                            status: *mut rocks_status_t)
     -> *mut rocks_logger_t;
}
extern "C" {
    pub fn rocks_db_open(options: *const rocks_options_t,
                         name: *const ::std::os::raw::c_char,
                         status: *mut rocks_status_t) -> *mut rocks_db_t;
}
extern "C" {
    pub fn rocks_db_close(db: *mut rocks_db_t);
}
extern "C" {
    pub fn rocks_db_open_for_read_only(options: *const rocks_options_t,
                                       name: *const ::std::os::raw::c_char,
                                       error_if_log_file_exist:
                                           ::std::os::raw::c_uchar,
                                       status: *mut rocks_status_t)
     -> *mut rocks_db_t;
}
extern "C" {
    pub fn rocks_db_list_column_families(options: *const rocks_options_t,
                                         name: *const ::std::os::raw::c_char,
                                         lencfs: *mut usize,
                                         status: *mut rocks_status_t)
     -> *mut *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocks_db_list_column_families_destroy(list:
                                                     *mut *mut ::std::os::raw::c_char,
                                                 len: usize);
}
extern "C" {
    pub fn rocks_db_create_column_family(db: *mut rocks_db_t,
                                         column_family_options:
                                             *const rocks_options_t,
                                         column_family_name:
                                             *const ::std::os::raw::c_char,
                                         status: *mut rocks_status_t)
     -> *mut rocks_column_family_handle_t;
}
extern "C" {
    pub fn rocks_db_drop_column_family(db: *mut rocks_db_t,
                                       handle:
                                           *mut rocks_column_family_handle_t,
                                       status: *mut rocks_status_t);
}
extern "C" {
    pub fn rocks_db_column_family_handle_destroy(handle:
                                                     *mut rocks_column_family_handle_t);
}
extern "C" {
    pub fn rocks_db_put(db: *mut rocks_db_t,
                        options: *const rocks_writeoptions_t,
                        key: *const ::std::os::raw::c_char, keylen: usize,
                        val: *const ::std::os::raw::c_char, vallen: usize,
                        status: *mut rocks_status_t);
}
extern "C" {
    pub fn rocks_db_put_cf(db: *mut rocks_db_t,
                           options: *const rocks_writeoptions_t,
                           column_family: *mut rocks_column_family_handle_t,
                           key: *const ::std::os::raw::c_char, keylen: usize,
                           val: *const ::std::os::raw::c_char, vallen: usize,
                           status: *mut rocks_status_t);
}
extern "C" {
    pub fn rocks_db_delete(db: *mut rocks_db_t,
                           options: *const rocks_writeoptions_t,
                           key: *const ::std::os::raw::c_char, keylen: usize,
                           status: *mut rocks_status_t);
}
extern "C" {
    pub fn rocks_db_delete_cf(db: *mut rocks_db_t,
                              options: *const rocks_writeoptions_t,
                              column_family:
                                  *mut rocks_column_family_handle_t,
                              key: *const ::std::os::raw::c_char,
                              keylen: usize, status: *mut rocks_status_t);
}
extern "C" {
    pub fn rocks_db_get(db: *mut rocks_db_t,
                        options: *const rocks_readoptions_t,
                        key: *const ::std::os::raw::c_char, keylen: usize,
                        vallen: *mut usize, status: *mut rocks_status_t)
     -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocks_db_get_cf(db: *mut rocks_db_t,
                           options: *const rocks_readoptions_t,
                           column_family: *mut rocks_column_family_handle_t,
                           key: *const ::std::os::raw::c_char, keylen: usize,
                           vallen: *mut usize, status: *mut rocks_status_t)
     -> *mut ::std::os::raw::c_char;
}
extern "C" {
    pub fn rocks_destroy_db(options: *const rocks_options_t,
                            name: *const ::std::os::raw::c_char,
                            status: *mut rocks_status_t);
}
extern "C" {
    pub fn rocks_repair_db(options: *const rocks_options_t,
                           name: *const ::std::os::raw::c_char,
                           status: *mut rocks_status_t);
}
extern "C" {
    pub fn rocks_ratelimiter_create(rate_bytes_per_sec: i64,
                                    refill_period_us: i64, fairness: i32)
     -> *mut rocks_ratelimiter_t;
}
extern "C" {
    pub fn rocks_ratelimiter_destroy(limiter: *mut rocks_ratelimiter_t);
}
extern "C" {
    pub fn rocks_create_default_env() -> *mut rocks_env_t;
}
extern "C" {
    pub fn rocks_create_mem_env() -> *mut rocks_env_t;
}
extern "C" {
    pub fn rocks_env_set_background_threads(env: *mut rocks_env_t,
                                            n: ::std::os::raw::c_int);
}
extern "C" {
    pub fn rocks_env_set_high_priority_background_threads(env:
                                                              *mut rocks_env_t,
                                                          n:
                                                              ::std::os::raw::c_int);
}
extern "C" {
    pub fn rocks_env_join_all_threads(env: *mut rocks_env_t);
}
extern "C" {
    pub fn rocks_env_destroy(env: *mut rocks_env_t);
}
extern "C" {
    pub fn rocks_envoptions_create() -> *mut rocks_envoptions_t;
}
extern "C" {
    pub fn rocks_envoptions_destroy(opt: *mut rocks_envoptions_t);
}
extern "C" {
    pub fn rocks_logger_destroy(logger: *mut rocks_logger_t);
}
extern "C" {
    pub fn rocks_create_snapshot(db: *mut rocks_db_t)
     -> *const rocks_snapshot_t;
}
extern "C" {
    pub fn rocks_release_snapshot(db: *mut rocks_db_t,
                                  snapshot: *const rocks_snapshot_t);
}
#[repr(C)]
#[derive(Copy)]
pub struct __va_list_tag {
    pub gp_offset: ::std::os::raw::c_uint,
    pub fp_offset: ::std::os::raw::c_uint,
    pub overflow_arg_area: *mut ::std::os::raw::c_void,
    pub reg_save_area: *mut ::std::os::raw::c_void,
}
impl Clone for __va_list_tag {
    fn clone(&self) -> Self { *self }
}
pub type __builtin_va_list = [__va_list_tag; 1usize];
